objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>End_Date_Text__c</fullName>
        <formula>TEXT(MONTH(End_Date__c)) + &apos;/&apos; + TEXT(DAY(End_Date__c)) + &apos;/&apos; + TEXT(YEAR(End_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_Text__c</fullName>
        <formula>TEXT(MONTH(Start_Date__c)) + &apos;/&apos; + TEXT(DAY(Start_Date__c)) + &apos;/&apos; + TEXT(YEAR(Start_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
</CustomObject>